--- a/app/elements/todo-view/todo-view.html
+++ b/app/elements/todo-view/todo-view.html
@@ -97,9 +97,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         padding: 64px 16px 0;
       }
 
+      todo-list {
+        margin: 0 auto 32px;
+      }
+
       todo-list, todo-input {
-        margin: 0 auto;
         max-width: 1000px;
+      }
+
+      todo-input {
+        margin: 0 auto;
       }
     </style>
 
