Improve no more todos msg styles

--- a/app/elements/todo-list/todo-list.html
+++ b/app/elements/todo-list/todo-list.html
@@ -24,7 +24,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-family: 'Roboto Slab';
         font-size: 20px;
         color: #BDBDBD;
+        cursor: default;
         padding-left: 67px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
       }
 
       todo-item:first-of-type {
