Fix busted blur behavior

--- a/app/elements/todo-item/todo-item.html
+++ b/app/elements/todo-item/todo-item.html
@@ -94,7 +94,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </paper-icon-button>
 
     </paper-material>
-    
+
   </template>
   <script>
     Polymer({
@@ -152,7 +152,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       _checkConfirmation: function(e) {
         if (e.keyCode === 13) {
           e.preventDefault();
-          e.currentTarget.blur();
+          e.target.blur();
         }
       },
 
