--- a/app/elements/todo-item/todo-item.html
+++ b/app/elements/todo-item/todo-item.html
@@ -48,6 +48,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --paper-input-container-input: {
           font-family: 'Roboto Slab';
           font-size: 20px;
+          text-overflow: ellipsis;
         };
         --paper-input-container-underline: {
           background: transparent;
