User can sign out.

--- a/app/elements/todo-data/todo-data.html
+++ b/app/elements/todo-data/todo-data.html
@@ -124,7 +124,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       },
 
       signOut: function() {
-        this.ref.unauth();
+        this.$.auth.ref.unauth();
         this.user = null;
       },
 
