Returning the item is confusing

--- a/app/elements/todo-list/todo-list.html
+++ b/app/elements/todo-list/todo-list.html
@@ -79,7 +79,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           // the todo
           if (filterBy === 'all') {
             return function(item) {
-              return item;
+              return true;
             };
           }
 
