Make jshint happy

--- a/app/elements/todo-list/todo-list.html
+++ b/app/elements/todo-list/todo-list.html
@@ -78,7 +78,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           // If filterBy is 'all', return a filter that always returns
           // the todo
           if (filterBy === 'all') {
-            return function(item) {
+            return function() {
               return true;
             };
           }
