--- a/app/index.html
+++ b/app/index.html
@@ -62,10 +62,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
 
-    <todo-data id="data"
-               location="https://polymer-todo.firebaseio.com"
+    <todo-auth id="auth"
                user="{{user}}"
-               todos="{{todos}}">
+               location="[[firebaseURL]]"
+               user="{{user}}">
+    </todo-auth>
+
+    <todo-data location="[[firebaseURL]]"
+               todos="{{todos}}"
+               user="{{user}}">
     </todo-data>
 
     <todo-view class="flex"
