Fix mainToolbar color

--- a/app/elements/todo-view/todo-view.html
+++ b/app/elements/todo-view/todo-view.html
@@ -70,6 +70,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         padding: 0 16px;
       }
 
+      #mainToolbar {
+        color: #FFF;
+      }
+
       #mainToolbar .middle-container {
         height: 100%;
         margin-left: 48px;
