Failing test that shows user property is overwritten by paper-dialog.

--- a/app/test/index.html
+++ b/app/test/index.html
@@ -23,7 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <body>
 
     <script>
-      WCT.loadSuites(['todo-list-basic.html']);
+      WCT.loadSuites(['todo-list-basic.html', 'todo-auth-basic.html']);
     </script>
 
 
