user should be read-only else will be overwritten by paper-dialog.

--- a/app/elements/todo-auth/todo-auth.html
+++ b/app/elements/todo-auth/todo-auth.html
@@ -64,7 +64,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </firebase-auth>
 
     <paper-dialog modal
-                  opened="{{!user}}"
+                  opened="[[!user]]"
                   entry-animation="scale-up-animation"
                   exit-animation="fade-out-animation">
       <h2>Oh hai! Please sign in</h2>
